--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,17 +10,18 @@ junitVersion = "1.3.0"
 espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.4"
 activityCompose = "1.11.0"
-composeBom = "2025.09.00"
+composeBom = "2025.09.01"
 moshiKotlin = "1.15.2"
 retrofit = "3.0.0"
 okhttp = "5.1.0"
 slackComposeLint = "1.4.2"
 kotlinxSerialization = "1.9.0"
-composeNavigation = "2.9.4"
+composeNavigation = "2.9.5"
 firebaseBom = "34.3.0"
 credentialManager = "1.5.0"
 googleId = "1.1.1"
 google-services = "4.4.3"
+coil = "3.3.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -54,6 +55,8 @@ firebase-analytics = { group = "com.google.firebase", name = "firebase-analytics
 credential-manager = { group = "androidx.credentials", name = "credentials", version.ref = "credentialManager" }
 credential-manager-play-services = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentialManager" }
 google-id = { module = "com.google.android.libraries.identity.googleid:googleid", version.ref = "googleId" }
+coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coil" }
+coil-network-okhttp = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coil" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
