--- a/.github/workflows/android-lint.yml
+++ b/.github/workflows/android-lint.yml
@@ -22,6 +22,10 @@ jobs:
           distribution: 'temurin'
           cache: gradle
 
+      - name: Create google-services.json
+        run: |
+          echo "${{ secrets.GOOGLE_SERVICES_JSON_BASE64 }}" | base64 --decode > app/google-services.json
+
       - name: Run Lint
         run: ./gradlew lint
         continue-on-error: false
