Update secrets.properties creation in workflow

--- a/.github/workflows/android-lint.yml
+++ b/.github/workflows/android-lint.yml
@@ -24,9 +24,9 @@ jobs:
           
       - name: Create secrets.properties
         run: |
-          echo "GOOGLE_AUTH_CLIENT_ID=\"${{ secrets.GOOGLE_AUTH_CLIENT_ID }}\"" >> secrets.properties
-          echo "BASE_API_URL_PROD=\"${{ secrets.BASE_API_URL_PROD }}\"" >> secrets.properties
-          echo "BASE_API_URL_DEV=\"${{ secrets.BASE_API_URL_DEV }}\"" >> secrets.properties
+          echo "GOOGLE_AUTH_WEB_CLIENT_ID=${{ secrets.GOOGLE_AUTH_WEB_CLIENT_ID }}" >> secrets.properties
+          echo "BASE_API_URL_PROD=${{ secrets.BASE_API_URL_PROD }}" >> secrets.properties
+          echo "BASE_API_URL_DEV=${{ secrets.BASE_API_URL_DEV }}" >> secrets.properties
 
       - name: Create google-services.json
         run: |
